--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A skeletal nodejs blueprint",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,27 @@
   "bugs": {
     "url": "https://github.com/tooney92/nodejs-blueprint/issues"
   },
-  "homepage": "https://github.com/tooney92/nodejs-blueprint#readme"
+  "homepage": "https://github.com/tooney92/nodejs-blueprint#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "better-config": "^1.2.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.5",
+    "morgan": "^1.10.0",
+    "node-input-validator": "^4.4.1",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.4"
+  }
 }
